[gd_scene load_steps=8 format=2]

[ext_resource path="res://Coloring Activity/Art8.png" type="Texture" id=1]
[ext_resource path="res://Coloring Activity/Art9.png" type="Texture" id=2]
[ext_resource path="res://Coloring Activity/PaletteColor.gd" type="Script" id=3]
[ext_resource path="res://AudioAll/Colouring/4. Color Selected.mp3" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 76.1052

[node name="PaletteColor" type="Area2D"]
script = ExtResource( 3 )

[node name="Background" type="AnimatedSprite" parent="."]
modulate = Color( 0.964706, 0.8, 0.419608, 1 )
position = Vector2( 21, -1 )
z_index = 1
frames = SubResource( 2 )

[node name="ColorMain" type="AnimatedSprite" parent="."]
modulate = Color( 0.847059, 0, 0, 1 )
position = Vector2( 16.5, 0 )
scale = Vector2( 0.8, 0.8 )
z_index = 2
frames = SubResource( 2 )

[node name="TickMark" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 3
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
shape = SubResource( 1 )

[node name="ColorSelectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="mouse_entered" from="." to="." method="_on_PaletteColor_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PaletteColor_mouse_exited"]
